# SpecTcl

./: .cproject  .gitignore  .gitmodules  C785Unpacker.cpp  CCUSBUnpacker.cpp  CCalibratedParameter.h  CFitButton.cpp  CFitCommand.cpp  CFitFactory.h  CFixedSizedUnpacker.cpp  CHANGELOG  CLinearFit.cpp  CLinearFit.h  CLinearFitCreator.h  CMADC32Unpacker.cpp  CMASE.cpp  CMakeLists.txt  CModuleUnpacker.cpp  COPYING  CParamMapCommand.h  CRateCommand.cpp  CRateCommand.h  CRateProcessor.cpp  CRateProcessor.h  CRootFilterOutputStage.cpp  CRootFilterOutputStage.h  CRootFilterOutputStageCreator.h  CRootNtupleAccumulator.cpp  CRootNtupleAccumulator.h  CStackUnpacker.cpp  CStackUnpacker.h  CV1x90Unpacker.cpp  CalibrateMainGui.tcl  ChangeLog  CompilationRules.include  Compression.cpp  Compression.h  ConnectServer.cpp  ConnectServer.h  ContentRequestHandler.cpp  (+105 more)
5.0dev/: Makefile.am  attach.tcl  config.h  configure.ac  pipetest.tcl  spectra.tcl  tcl++incorp.sh  test.c  testBuildTarball  testing.tcl
Events/: AnalysisTest.cpp  Analyzer.cpp  Analyzer.h  BufferDecoder.cpp  BufferDecoder.h  BufferTranslator.cpp  BufferTranslator.h  ClassBreakdown.WC  ClassBreakdown.omt  DopeVector.h  Event.cpp  Event.h  EventFormatError.cpp  EventList.cpp  EventList.h  EventSink.cpp  EventSink.h  EventSinkPipeline.cpp  Makefile  Makefile.am  Makefile.in  NSCLBufferDecoder.cpp  NSCLJumboBufferDecoder.cpp  RunControl.cpp  RunControl.h  TCLRunFileHandler.cpp  TCLRunFileHandler.h  TKRunControl.h  TranslatorPointer.h  ValidValue.h
Exception/: ErrnoException.cpp  Exception.h  Exception.omt  Makefile  Makefile.am  StreamIOError.h
Filter/: CFilterOutputStage.h  CXdrInputStream.cpp  CXdrInputStream.h  CXdrMemInputStream.cpp  CXdrOutputStream.h  EventFilter.cpp  EventFilter.h  EventSinkPipeline.cpp  EventSinkPipeline.h  FilterBufferDecoder.cpp  FilterBufferDecoder.h  FilterDictEntry.h  FilterDictionary.cpp  FilterEventProcessor.cpp  FilterEventProcessor.h  GatedEventFilter.cpp  GatedEventFilter.h  Makefile  Makefile.am  OutputEventStream.cpp  OutputEventStream.h
Fits/: CFit.cpp  CFitDictionary.cpp  CFitDictionary.h  CFitFactory.h  CGaussianFit.cpp  CGaussianFit.h  CLinearFit.cpp  CLinearFit.h  CLinearFitCreator.cpp  CLinearFitCreator.h  CSpectrumFit.cpp  CSpectrumFit.h  Makefile.am  fitgsl.h  permission.txt
Gates/: ActualIterator.cpp  AndGate.cpp  AndGate.h  Band.cpp  Band.h  C2Bands.cpp  CEverywhereROI.cpp  CompoundGate.cpp  CompoundGate.h  ConstituentIterator.cpp  Contour.cpp  Contour.h  Cut.cpp  Cut.h  DeletedGate.cpp  FalseGate.cpp  FalseGate.h  GammaBand.cpp  GammaBand.h  GammaContour.cpp  GammaContour.h  GammaCut.cpp  GammaCut.h  Gate.cpp  Gate.h  GateContainer.h  GateListIterator.cpp  Interior.h  InteriorRow.h  Makefile  Makefile.am  Makefile.in  MaskEqualGate.cpp  MaskNotGate.cpp  Not.cpp  Not.h  OrGate.h  PointlistGate.cpp  PointlistGate.h  PointlistIterator.h  (+2 more)
Sorter/: AnalysisTest.cpp  BitSpectrumL.cpp  BitSpectrumL.h  BitSpectrumW.cpp  BitSpectrumW.h  CAxis.cpp  CAxis.h  CAxisTests.cpp  CFlattenedGateList.cpp  CFlattenedGateList.h  CGammaSummarySpectrum.cpp  CGammaSummarySpectrum.h  CHistogrammerFitObserver.cpp  CHistogrammerFitObserver.h  CParameterMapping.cpp  CParameterMapping.h  CParameterMappingTest.cpp  CSpectrum2Dm.cpp  CSpectrum2Dm.h  CSpectrum2DmB.cpp  CSpectrum2DmB.h  CSpectrum2DmL.cpp  CSpectrum2DmL.h  CSpectrum2DmW.cpp  CSpectrum2DmW.h  CSpectrumByParameter.cpp  Dictionary.h  DictionaryException.cpp  DictionaryException.h  Gamma1DL.cpp  Gamma1DL.h  Gamma1DW.cpp  Gamma1DW.h  Gamma2DB.cpp  Gamma2DB.h  Gamma2DD.cpp  Gamma2DD.h  Gamma2DL.cpp  Gamma2DL.h  Gamma2DW.cpp  (+46 more)
SpecTcl/: .project  AUTHORS  AppInit.cpp  AppInit.h  ApplyCommand.cpp  ApplyCommand.h  AttachCommand.cpp  AttachCommand.h  BindCommand.cpp  CFitCommand.cpp  CFitCommand.h  CFoldCommand.cpp  CHANGELOG  ChanCommand.cpp  ClearCommand.cpp  ClearCommand.h  CompilationRules.include  DataSourcePackage.cpp  DataSourcePackage.h  Directories.include  Doxyfile  EventProcessor.cpp  EventProcessor.h  FilterCommand.cpp  FilterCommand.h  GateCommand.cpp  GateCommand.h  GateFactory.cpp  GateFactory.h  GateFactoryException.h  GatePackage.cpp  GatePackage.h  Globals.cpp  Globals.h  INSTALL  IntegrateCommand.cpp  LICENSE  Makefile  Makefile.am  Makefile.in  (+73 more)
SpectrumIO/: Makefile  Makefile.am  NSCLAsciiSpectrumFormatter.cpp  NSCLAsciiSpectrumFormatter.h  NSCLBinarySpectrumFormatter.cpp  SpectrumFormatError.cpp  SpectrumFormatError.h  SpectrumFormatter.cpp  SpectrumFormatter.h  SpectrumFormatterFactory.h  SpectrumStandardFormatters.cpp  nsclbin.cpp  nsclbinerror.cpp  nsclbinerror.h  nscldata.cpp  nscltime.h
TestFiles/: Makefile  Makefile.am  Makefile.in  ltwrite.cpp  testfile.cpp
TreeParam/: BindVisitor.h  CTreeException.cpp  CTreeException.h  CTreeParameter.cpp  CTreeParameter.h  CTreeParameterArray.cpp  CTreeParameterCommand.cpp  CTreeVariable.h  CTreeVariableCommand.cpp  CTreeVariableCommand.h  CTreeVariableProperties.cpp  Makefile.am  MatchTest.cpp  ParameterManipulator.tcl  ResetVisitor.h  SetChannelsVisitor.cpp  SetChannelsVisitor.h  SetChansTest.cpp  SetLimitsTest.cpp  SetLimitsVisitor.cpp  SetUnitsTest.cpp  SetUnitsVisitor.h  SpecTclGui.tcl  SpectrumGenerator.tcl  TclGrammerApp.cpp  TopGui.tcl  TreeParamArrayTest.cpp  TreeParamCommandTest.cpp  TreeVariableCommandTests.cpp  UncheckVisitor.cpp  UncheckVisitor.h  mclistbox.tcl  testStubs.cpp
Xamine/: ButtonEvent.h  Makefile  Makefile.am  Point.h  Xamine1D.cpp  Xamine1D.h  Xamine2D.cpp  Xamine2D.h  XamineButton.cpp  XamineButtonException.cpp  XamineButtonPrompt.cpp  XamineButtonPrompt.h  XamineConfirmPrompt.cpp  XamineFilePrompt.h  XamineGateException.cpp  XamineGateException.h  XamineGates.cpp  XamineGates.h  XamineNoPrompt.h  XaminePushButton.cpp  XaminePushButton.h  XamineSpectrum.h  XamineSpectrumIterator.cpp  XamineSpectrumIterator.h  Xamineplus.cpp  Xamineplus.h
calibratedparams/: CCalibratedFitCommand.cpp  CCalibratedFitCommand.h  CCalibratedParameterCommand.cpp  CCalibratedParameterCommand.h  CFitCommand.cpp  CFitCreator.h  CalibIOGUI.tcl  CalibrationPackage.cpp  FitIO.tcl  Makefile  (+2 more)
(+5938 files in other folders)
